# lidar_cluster_detection

./: .gitignore  README.md
lidar_euclidean_clustering/: CMakeLists.txt  package.xml
lidar_euclidean_clustering/include/lidar_euclidean_clustering/: euclidean_clustering.hpp
lidar_euclidean_clustering/src/: euclidean_clustering.cpp  euclidean_clustering_node.cpp
pcd_publisher/: CMakeLists.txt  package.xml
pcd_publisher/config/: config.rviz
pcd_publisher/data/: 1687224630063542.pcd  1687224630161175.pcd  1687224630259292.pcd  1687224630358705.pcd  1687224630454928.pcd  1687224630552704.pcd  1687224630650547.pcd  1687224630748725.pcd  1687224630944390.pcd  1687224631041896.pcd  1687224631140088.pcd  1687224631237881.pcd  1687224631335712.pcd  1687224631433890.pcd  1687224631531394.pcd  1687224631629531.pcd  1687224631727041.pcd  1687224631825343.pcd  1687224632020882.pcd  1687224632118748.pcd  1687224632216544.pcd  1687224632314371.pcd  1687224632412321.pcd  1687224632510060.pcd  1687224632607923.pcd  1687224632706892.pcd  1687224632805567.pcd  1687224632901767.pcd  1687224633097436.pcd  1687224633195018.pcd  1687224633293106.pcd  1687224633390640.pcd  1687224633488782.pcd  1687224633586582.pcd  1687224633684448.pcd  1687224633880105.pcd  1687224633977896.pcd  1687224634075785.pcd  1687224634173553.pcd  1687224634467095.pcd  (+47 more)
pcd_publisher/include/pcd_publisher/: pcd_publisher.hpp
pcd_publisher/launch/: pcd_publisher_node.launch.py
pcd_publisher/src/: pcd_publisher.cpp  pcd_publisher_node.cpp
